# docs/swagger.json
@@ -129,12 +129,6 @@
     "definitions": {
         "github_com_jason810496_Dcard-Advertisement-API_pkg_schemas.CreateAdConditions": {
             "type": "object",
-            "required": [
-                "ageEnd",
-                "ageStart",
-                "country",
-                "platform"
-            ],
             "properties": {
                 "ageEnd": {
                     "type": "integer",
@@ -156,6 +150,16 @@
                     "example": [
                         "TW",
                         "JP"
+                    ]
+                },
+                "gender": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "F",
+                        "M"
                     ]
                 },
                 "platform": {
@@ -184,7 +188,7 @@
                 },
                 "endAt": {
                     "type": "string",
-                    "example": "2023-12-31T16:00:00.000Z"
+                    "example": "2024-12-31T16:00:00.000Z"
                 },
                 "startAt": {
                     "type": "string",
